[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Doarakko"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.6"
slack-bolt = "^1.18.0"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
pylint = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
